--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #cb7aa2; }
+  background: #433018; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #8d6152; }
+  background: #d7108b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3e5321; }
+  background: #2f67b5; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #bc8886; }
+  background: #dda218; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7322fb; }
+  background: #ec946a; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e374b3; }
+  background: #755fe6; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f3a5e0; }
+  background: #efb215; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #0dafe4; }
+  background: #273efd; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f19a54; }
+  background: #b54b70; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #2e9131; }
+  background: #7e4862; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #49d230; }
+  background: #a321e2; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #baf159; }
+  background: #9677da; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #dc5c9a; }
+  background: #d514e4; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #13b406; }
+  background: #38152e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #27977d; }
+  background: #1f7e09; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #6e13f3; }
+  background: #93327f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #158b9c; }
+  background: #dd1b8f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #070b94; }
+  background: #2b79de; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #77e26a; }
+  background: #01107f; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #888e2f; }
+  background: #fa7b62; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #5dcc4e; }
+  background: #3d42f9; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #0e36e1; }
+  background: #abe67c; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #87fedc; }
+  background: #48feca; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7b861a; }
+  background: #974920; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #9f8a54; }
+  background: #54f751; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #4465fc; }
+  background: #02133e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #f598be; }
+  background: #50ef14; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #629c26; }
+  background: #087670; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c1f2a3; }
+  background: #1ca4bc; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #e67682; }
+  background: #025ca7; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d76ae3; }
+  background: #072cb3; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #f2f22a; }
+  background: #d9674c; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #7f2aad; }
+  background: #c0a4cb; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ce3e2d; }
+  background: #f985fc; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #bc6eed; }
+  background: #d645f3; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #59d277; }
+  background: #13780d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #32da0a; }
+  background: #5837e1; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #586917; }
+  background: #3232d5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #03b1ab; }
+  background: #52f7d4; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e9a0bf; }
+  background: #bf8952; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #3717bf; }
+  background: #1427e3; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #7402e2; }
+  background: #ea2509; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #4861cb; }
+  background: #8c6dc6; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #e37398; }
+  background: #9d7daa; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #eec50e; }
+  background: #3461e2; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #9cd507; }
+  background: #fc8725; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #052c70; }
+  background: #46a537; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e97b72; }
+  background: #16108c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f5f5a3; }
+  background: #586be1; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #52ae8f; }
+  background: #97f2f6; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8fc8e1; }
+  background: #84d4bd; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2ed45d; }
+  background: #bca236; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #63c406; }
+  background: #9a0577; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #4c8356; }
+  background: #7db09e; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #d67aa2; }
+  background: #27c1f5; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #b16777; }
+  background: #127ee4; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #bf6943; }
+  background: #b2677a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #bafa73; }
+  background: #aa7ace; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #5c2325; }
+  background: #212cd6; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #36de34; }
+  background: #ad4688; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #eb3901; }
+  background: #dbdfa6; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #734304; }
+  background: #0d2423; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #04f25e; }
+  background: #64c2f4; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #46761b; }
+  background: #b2e3e2; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #4472d6; }
+  background: #2a6c46; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #4d456d; }
+  background: #945870; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #fc80c9; }
+  background: #2a5dec; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #6dc262; }
+  background: #292841; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #493b6a; }
+  background: #0ef60d; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #8cb0e5; }
+  background: #ef1415; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #0202cc; }
+  background: #51e513; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #4f031d; }
+  background: #b2425d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #5ab15b; }
+  background: #a9f8a9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #233a48; }
+  background: #283429; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #568f19; }
+  background: #2cfff1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f198a7; }
+  background: #57f0f6; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #3789a6; }
+  background: #b2790c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #b09c70; }
+  background: #a9e0fe; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #fae04d; }
+  background: #e4d416; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #54d835; }
+  background: #c8dfa7; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #69bc58; }
+  background: #293160; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #42c3a7; }
+  background: #10462d; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2d5e95; }
+  background: #94c0d3; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #7f9a0c; }
+  background: #886996; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #a0076c; }
+  background: #04e388; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #bedb4a; }
+  background: #2e9343; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #448bd9; }
+  background: #58b02b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #1ce7e0; }
+  background: #2f24fd; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #455941; }
+  background: #7824cf; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #cbfbd9; }
+  background: #4fb43f; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #577291; }
+  background: #f0450b; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #522a0c; }
+  background: #6bad70; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #9326af; }
+  background: #287e83; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #949f3a; }
+  background: #608b5c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #cc48bf; }
+  background: #f1925a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #8f6dcb; }
+  background: #182eee; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b66ef6; }
+  background: #9b28ee; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #7c50eb; }
+  background: #da3aa7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #0fc6ef; }
+  background: #e6e81a; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #2ff50b; }
+  background: #0132b3; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10696,7 +10696,7 @@ li.prev {
   vertical-align: top; }
 
 .LoginPanel .fieldsSection {
-  /*min-width: 320px;
+    /*min-width: 320px;
 	padding-left: 26px;*/
   display: inline-block;
   vertical-align: top; }
@@ -10754,7 +10754,7 @@ select {
   -moz-box-sizing: border-box; }
 
 .LoginPanel .fieldsBotSection input[type="checkbox"] {
-  /*border: 1px solid #b9babd;
+    /*border: 1px solid #b9babd;
 	background: #fff;
 	width: 12px;*/
   display: none; }
@@ -10963,6 +10963,134 @@ input[type="submit"] {
   width: 100%;
   max-height: 300px; }
 
+.Connectors-top-searchbar-div {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  margin-top: 30px; }
+
+.Connectors-top-searchbar-div .search-wrap input {
+  width: 100%;
+  padding: 14px 10px;
+  padding-left: 10px;
+  border: 0px solid #bababa;
+  padding-left: 40px; }
+
+.Connectors-top-searchbar-div .search-field {
+  border-radius: 40px; }
+
+.Connectors-top-searchbar-div .search-wrap::before {
+  content: " ";
+  position: absolute;
+  width: 30px;
+  height: 20px;
+  display: block;
+  background-image: url(../images/search.svg);
+  z-index: 2;
+  top: -7px;
+  margin: auto;
+  bottom: 0;
+  left: 12px; }
+
+.Connectors-top-searchbar-div .search-wrap {
+  display: flex;
+  width: 82%;
+  position: relative; }
+
+.toggle-btn-div {
+  display: flex;
+  align-items: center; }
+
+.toggle-btn-div .toggle-btn {
+  margin-right: 10px; }
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 45px;
+  height: 25px;
+  margin-top: 8px; }
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0; }
+
+.sliders {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s; }
+
+.sliders:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s; }
+
+input:checked + .sliders {
+  background-color: #2196f3; }
+
+input:focus + .sliders {
+  box-shadow: 0 0 1px #2196f3; }
+
+input:checked + .sliders:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px); }
+
+/* Rounded sliders */
+.sliders.round {
+  border-radius: 34px; }
+
+.sliders.round:before {
+  border-radius: 50%; }
+
+.connectors-wrapper table td {
+  vertical-align: middle !important; }
+
+.c-green {
+  padding: 8px;
+  background: #70ff03;
+  border-radius: 50%;
+  display: block;
+  width: 16px;
+  height: 16px; }
+
+.c-red {
+  padding: 8px;
+  background: #f00f00;
+  border-radius: 50%;
+  display: block;
+  width: 16px;
+  height: 16px; }
+
+.c-orange {
+  padding: 8px;
+  background: #f9cc12;
+  border-radius: 50%;
+  display: block;
+  width: 16px;
+  height: 16px; }
+
+.table-icon {
+  font-size: 20px; }
+
+.table-icon img {
+  width: 20px;
+  height: 20px; }
+
 @media screen and (max-width: 767px) {
   .profile-box {
     padding: 10px; }
@@ -11049,7 +11177,10 @@ input[type="submit"] {
   .try-free-btn {
     padding: 12px !important;
     font-size: 13px;
-    transition: all 0.3s ease-in-out 0s; } }
+    transition: all 0.3s ease-in-out 0s; }
+
+  .Connectors-top-searchbar-div {
+    flex-direction: column; } }
 /*767 screen end here*/
 @media screen and (max-width: 767px) {
   .textarea-comment {
