--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -111,6 +111,10 @@
         font-size: 13px;
         transition: all 0.3s ease-in-out 0s;
     }
+
+    .Connectors-top-searchbar-div {
+        flex-direction: column;
+    }
 }
 
 /*767 screen end here*/
