--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #433018; }
+  background: #443558; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #d7108b; }
+  background: #a509f7; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #2f67b5; }
+  background: #45046e; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #dda218; }
+  background: #648f0a; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ec946a; }
+  background: #dd38f9; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #755fe6; }
+  background: #ca8cb4; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #efb215; }
+  background: #6d760e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #273efd; }
+  background: #f04ebf; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b54b70; }
+  background: #8830fc; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #7e4862; }
+  background: #e99fa2; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a321e2; }
+  background: #71a41a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #9677da; }
+  background: #60c757; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d514e4; }
+  background: #55c9cb; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #38152e; }
+  background: #d715fa; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1f7e09; }
+  background: #e65d8b; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #93327f; }
+  background: #51812d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #dd1b8f; }
+  background: #0915fc; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2b79de; }
+  background: #149aa2; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #01107f; }
+  background: #8704c4; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #fa7b62; }
+  background: #3450be; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #3d42f9; }
+  background: #e6f3f7; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #abe67c; }
+  background: #503a9a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #48feca; }
+  background: #4b5022; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #974920; }
+  background: #63f53f; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #54f751; }
+  background: #100866; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #02133e; }
+  background: #d01743; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #50ef14; }
+  background: #92e1cb; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #087670; }
+  background: #b7bf02; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #1ca4bc; }
+  background: #ff826e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #025ca7; }
+  background: #44c122; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #072cb3; }
+  background: #d1e5fc; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d9674c; }
+  background: #8ad68b; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #c0a4cb; }
+  background: #60ea3e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f985fc; }
+  background: #1ec51e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #d645f3; }
+  background: #e8fa27; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #13780d; }
+  background: #b1a8e7; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #5837e1; }
+  background: #0a89bf; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #3232d5; }
+  background: #8062fd; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #52f7d4; }
+  background: #54eae9; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #bf8952; }
+  background: #c01cee; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #1427e3; }
+  background: #8012c8; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #ea2509; }
+  background: #5b475f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #8c6dc6; }
+  background: #0d7d92; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #9d7daa; }
+  background: #4dcb32; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #3461e2; }
+  background: #118d83; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #fc8725; }
+  background: #edda6f; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #46a537; }
+  background: #12d48d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #16108c; }
+  background: #3d88c3; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #586be1; }
+  background: #eb6f4e; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #97f2f6; }
+  background: #4ead3f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #84d4bd; }
+  background: #64fa69; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #bca236; }
+  background: #39fbc3; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #9a0577; }
+  background: #18bd62; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #7db09e; }
+  background: #f7dd27; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #27c1f5; }
+  background: #e011b7; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #127ee4; }
+  background: #2c715d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #b2677a; }
+  background: #63780a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #aa7ace; }
+  background: #73ace2; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #212cd6; }
+  background: #89522b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ad4688; }
+  background: #806878; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #dbdfa6; }
+  background: #3ed7dd; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #0d2423; }
+  background: #908602; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #64c2f4; }
+  background: #69db81; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #b2e3e2; }
+  background: #cc57b7; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #2a6c46; }
+  background: #6dfd7e; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #945870; }
+  background: #f73fd1; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #2a5dec; }
+  background: #1cc14f; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #292841; }
+  background: #12a673; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0ef60d; }
+  background: #1e41df; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ef1415; }
+  background: #fc9a4f; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #51e513; }
+  background: #af1f1d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b2425d; }
+  background: #bb0c61; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a9f8a9; }
+  background: #969050; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #283429; }
+  background: #ac6585; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #2cfff1; }
+  background: #4b81d3; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #57f0f6; }
+  background: #629ff1; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b2790c; }
+  background: #cff7a2; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a9e0fe; }
+  background: #285bd4; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #e4d416; }
+  background: #e86132; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c8dfa7; }
+  background: #288256; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #293160; }
+  background: #4e3507; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #10462d; }
+  background: #8ae4f5; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #94c0d3; }
+  background: #14ce5b; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #886996; }
+  background: #c2323d; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #04e388; }
+  background: #945996; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #2e9343; }
+  background: #616d4c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #58b02b; }
+  background: #2c4292; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #2f24fd; }
+  background: #1e9c19; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7824cf; }
+  background: #a50a40; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #4fb43f; }
+  background: #ed1380; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f0450b; }
+  background: #39a4ae; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6bad70; }
+  background: #7f4bcb; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #287e83; }
+  background: #d1a744; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #608b5c; }
+  background: #a9d4e0; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f1925a; }
+  background: #f3bbca; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #182eee; }
+  background: #440f3d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #9b28ee; }
+  background: #6ecd45; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #da3aa7; }
+  background: #b3a6a4; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #e6e81a; }
+  background: #b10aa9; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0132b3; }
+  background: #5bb25d; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
