--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #443558; }
+  background: #3771ba; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #a509f7; }
+  background: #757070; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #45046e; }
+  background: #24eb65; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #648f0a; }
+  background: #de3247; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #dd38f9; }
+  background: #95fc37; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ca8cb4; }
+  background: #e92475; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6d760e; }
+  background: #ba1a86; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f04ebf; }
+  background: #70e3fe; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8830fc; }
+  background: #1bf907; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e99fa2; }
+  background: #fcf63b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #71a41a; }
+  background: #073d8e; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #60c757; }
+  background: #cc8ef9; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #55c9cb; }
+  background: #489a03; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d715fa; }
+  background: #5c5bbf; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e65d8b; }
+  background: #10d042; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #51812d; }
+  background: #a5b38e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #0915fc; }
+  background: #5b25f3; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #149aa2; }
+  background: #865509; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #8704c4; }
+  background: #0470a4; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3450be; }
+  background: #09e79b; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #e6f3f7; }
+  background: #57ec1e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #503a9a; }
+  background: #af07e1; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4b5022; }
+  background: #79d11c; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #63f53f; }
+  background: #f9edb8; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #100866; }
+  background: #76f0f6; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #d01743; }
+  background: #2df0c2; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #92e1cb; }
+  background: #7cf341; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b7bf02; }
+  background: #15e2ed; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ff826e; }
+  background: #f4232b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #44c122; }
+  background: #5f61bd; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d1e5fc; }
+  background: #d62ae9; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #8ad68b; }
+  background: #25b148; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #60ea3e; }
+  background: #e2cc77; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #1ec51e; }
+  background: #a390cb; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e8fa27; }
+  background: #d448f7; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b1a8e7; }
+  background: #d2681a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #0a89bf; }
+  background: #f6347c; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #8062fd; }
+  background: #d6f0b5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #54eae9; }
+  background: #0d99f8; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c01cee; }
+  background: #10c6ab; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #8012c8; }
+  background: #3da474; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #5b475f; }
+  background: #12def2; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #0d7d92; }
+  background: #1f1a7b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #4dcb32; }
+  background: #0f267b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #118d83; }
+  background: #d6d50f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #edda6f; }
+  background: #b3ba11; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #12d48d; }
+  background: #3b9baf; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #3d88c3; }
+  background: #a6b85a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #eb6f4e; }
+  background: #b08c0b; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #4ead3f; }
+  background: #b540d9; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #64fa69; }
+  background: #f072e7; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #39fbc3; }
+  background: #d58e3a; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #18bd62; }
+  background: #f70346; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f7dd27; }
+  background: #9e800f; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e011b7; }
+  background: #cbf641; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2c715d; }
+  background: #6cc956; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #63780a; }
+  background: #0abe9f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #73ace2; }
+  background: #ba7dff; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #89522b; }
+  background: #84100c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #806878; }
+  background: #2ee23a; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #3ed7dd; }
+  background: #610c0a; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #908602; }
+  background: #e9ea89; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #69db81; }
+  background: #8f6bd2; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #cc57b7; }
+  background: #3a38f9; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #6dfd7e; }
+  background: #7eb01c; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f73fd1; }
+  background: #9b112c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1cc14f; }
+  background: #b111be; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #12a673; }
+  background: #179190; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #1e41df; }
+  background: #ee2faf; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #fc9a4f; }
+  background: #6a4384; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #af1f1d; }
+  background: #35ca18; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #bb0c61; }
+  background: #3a8e9b; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #969050; }
+  background: #08769e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ac6585; }
+  background: #334498; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #4b81d3; }
+  background: #3b2b93; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #629ff1; }
+  background: #ed2f7d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #cff7a2; }
+  background: #576954; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #285bd4; }
+  background: #9b30e9; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #e86132; }
+  background: #5fe117; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #288256; }
+  background: #a2f33f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #4e3507; }
+  background: #d560df; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8ae4f5; }
+  background: #2914fa; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #14ce5b; }
+  background: #c8aa9a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c2323d; }
+  background: #757989; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #945996; }
+  background: #01339d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #616d4c; }
+  background: #9961dc; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2c4292; }
+  background: #267d1e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #1e9c19; }
+  background: #fd75b4; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a50a40; }
+  background: #65f3c7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ed1380; }
+  background: #c59229; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #39a4ae; }
+  background: #541a6f; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7f4bcb; }
+  background: #6f513b; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d1a744; }
+  background: #bb2d93; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a9d4e0; }
+  background: #1121a2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f3bbca; }
+  background: #f6a0dc; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #440f3d; }
+  background: #afa979; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #6ecd45; }
+  background: #72ace7; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b3a6a4; }
+  background: #cbbdda; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b10aa9; }
+  background: #0d168b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #5bb25d; }
+  background: #1bd477; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11060,36 +11060,50 @@ input:checked + .sliders:before {
 .connectors-wrapper table td {
   vertical-align: middle !important; }
 
+.connectors-wrapper .table-innerbox {
+  display: flex;
+  margin-right: 25px;
+  align-items: center; }
+
 .c-green {
-  padding: 8px;
+  padding: 6px;
   background: #70ff03;
-  border-radius: 50%;
+  border-radius: 100%;
   display: block;
-  width: 16px;
-  height: 16px; }
+  width: 14px;
+  height: 14px;
+  margin-left: 6px; }
 
 .c-red {
-  padding: 8px;
+  padding: 6px;
   background: #f00f00;
-  border-radius: 50%;
+  border-radius: 100%;
   display: block;
-  width: 16px;
-  height: 16px; }
+  width: 14px;
+  height: 14px;
+  margin-left: 6px; }
 
 .c-orange {
-  padding: 8px;
+  padding: 6px;
   background: #f9cc12;
-  border-radius: 50%;
+  border-radius: 100%;
   display: block;
-  width: 16px;
-  height: 16px; }
+  width: 14px;
+  height: 14px;
+  margin-left: 6px; }
 
 .table-icon {
-  font-size: 20px; }
+  font-size: 20px;
+  display: flex;
+  justify-content: center; }
+
+.table-icon span + span {
+  letter-spacing: 4px; }
 
 .table-icon img {
   width: 20px;
-  height: 20px; }
+  height: 20px;
+  margin: 0px 10px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -11180,7 +11194,16 @@ input:checked + .sliders:before {
     transition: all 0.3s ease-in-out 0s; }
 
   .Connectors-top-searchbar-div {
-    flex-direction: column; } }
+    flex-direction: column; }
+
+  .Connectors-top-searchbar-div .search-wrap {
+    width: 100%; }
+
+  .toggle-btn-div {
+    margin-top: 15px; }
+
+  .connectors-main-wrapper .inner-tab-right-section {
+    margin-top: 0px !important; } }
 /*767 screen end here*/
 @media screen and (max-width: 767px) {
   .textarea-comment {
